<resources>
    <string name="app_name">RecipesApp</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">log In</string>
    <string name="profile_name">profile name</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="find_your_favorite_food">Find Your Favorite Food</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="per_serving_100g">Per serving - 100g</string>
    <string name="per_serving">Per serving</string>
    <string name="servings">Servings:</string>
    <string name="ingredients">Ingredients</string>
    <string name="diet">Diet:</string>
    <string name="health">Health:</string>
    <string name="cuisine_type">Cuisine Type:</string>
    <string name="meal_type">Meal Type:</string>
    <string name="dish_type">Dish Type:</string>
    <string name="what_do_you_want_to_find">What do you want to find?</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="you_don_t_have_an_account">you don\'t have an account?</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_your_new_profile_name">Enter your new profile name</string>
    <string name="accept">Accept</string>
    <string name="verification_email_has_been_sent">Verification email has been sent!</string>
    <string name="verification_email_not_sent">Verification email not sent!</string>
    <string name="not_uploaded">Not uploaded</string>
    <string name="profile_name_must_contains_at_least_2_characters">Profile name must contain at least 2 characters!</string>
    <string name="you_should_verify_your_account">You should verify your account!</string>
    <string name="new_profile_name_saved">new profile name saved</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong, please try again later!</string>
    <string name="new_photo_saved">new photo saved</string>
    <string name="failure">Failure</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="invalid_api_key">Invalid Api Key</string>
    <string name="wheat_free">wheat-free</string>
    <string name="vegan">vegan</string>
    <string name="pork_free">pork-free</string>
    <string name="sulfite_free">sulfite-free</string>
    <string name="sugar_conscious">sugar-conscious</string>
    <string name="soy_free">soy-free</string>
    <string name="red_meat_free">red-meat-free</string>
    <string name="tree_nut_free">tree-nut-free</string>
    <string name="peanut_free">peanut-free</string>
    <string name="no_oil_added">no-oil-added</string>
    <string name="low_sugar">low-sugar</string>
    <string name="low_fat_abs">low-fat-abs</string>
    <string name="fish_free">fish-free</string>
    <string name="kosher">kosher</string>
    <string name="gluten_free">gluten-free</string>
    <string name="egg_free">egg-free</string>
    <string name="dairy_free">dairy-free</string>
    <string name="celery_free">celery-free</string>
    <string name="alcohol_free">alcohol-free</string>
    <string name="alcohol_cocktail">alcohol-cocktail</string>
    <string name="low_sodium">low-sodium</string>
    <string name="low_fat">low-fat</string>
    <string name="low_carb">low-carb</string>
    <string name="high_protein">high-protein</string>
    <string name="high_fiber">high-fiber</string>
    <string name="balanced">balanced</string>
    <string name="save">Save</string>

</resources>